k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-object-explorer
  labels:
    app: k8s-object-explorer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: k8s-object-explorer
